--- a/apps/templates/home/ui-maps.html
+++ b/apps/templates/home/ui-maps.html
@@ -426,7 +426,7 @@
                 <div class="prediction-result">
                     <h4>Prediction Result</h4>
                     <div id="prediction-value" class="prediction-value"></div>
-                    <div id="probability-value">Probability: <span></span></div>
+                    <div id="probability-value">Probability of exclussion: <span></span></div>
                     <div class="probability-gauge">
                         <canvas id="gauge-chart"></canvas>
                     </div>
